--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "helmet": "^4.4.1",
     "next": "10.0.6",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "react-helmet": "^6.1.0"
   }
 }
