--- a/.env.local.example
+++ b/.env.local.example
@@ -1,2 +1,2 @@
-MAILCHIMP_LIST_ID=@mailchimp-list-id-production-fe45
-MAILCHIMP_API_KEY=687aa7073293fd3ba62ab9178794b403-us7
+MAILCHIMP_LIST_ID=
+MAILCHIMP_API_KEY=
